# ampersona

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Agents.md  Cargo.toml  FEATURE_PARITY.md  OPERATIONS.md  README.md  ROADMAP.md  Roadmap.md  SPEC.md  THEORY.md  THREAT_MODEL.md  Theory.md  VISION.md
ADR/: ADR-001-three-pillar-architecture.md  ADR-002-deny-by-default-policy.md  ADR-003-deterministic-gate-evaluation.md  ADR-004-workspace-layout-four-crates.md  ADR-005-hash-chain-audit-log.md  ADR-006-jcs-canonicalization-for-signatures.md  ADR-007-criteria-logic.md  ADR-010-authority-overlay-semantics.md
crates/amp/: Cargo.toml
crates/amp/src/: main.rs
crates/amp/tests/: backward_compat.rs  conformance_tests.rs  golden_tests.rs  test_helpers.rs
crates/amp/tests/golden/: quiet_stone.expected.md
crates/ampersona-core/: Cargo.toml
crates/ampersona-core/schema/: ampersona-v0.2.schema.json  ampersona-v1.0.schema.json
crates/ampersona-core/src/: actions.rs  compose.rs  errors.rs  lib.rs  list.rs  migrate.rs  prompt.rs  register.rs  schema.rs  state.rs  templates.rs  traits.rs  types.rs
crates/ampersona-core/src/spec/: audit.rs  authority.rs  gates.rs  identity.rs  mod.rs  signature.rs
crates/ampersona-engine/: Cargo.toml
crates/ampersona-engine/src/: lib.rs
crates/ampersona-engine/src/convert/: aieos.rs  mod.rs  zeroclaw.rs
crates/ampersona-engine/src/gates/: decision.rs  evaluator.rs  mod.rs  override_gate.rs
crates/ampersona-engine/src/policy/: action_registry.rs  checker.rs  mod.rs  precedence.rs
crates/ampersona-engine/src/state/: atomic.rs  audit_log.rs  drift.rs  elevation.rs  mod.rs  phase.rs  writer.rs
crates/ampersona-sign/: Cargo.toml
crates/ampersona-sign/src/: canonical.rs  lib.rs  sign.rs  verify.rs
examples/: agent_mail_metrics.json  agent_mail_worker.json  aieos_identity.json  odoov19_metrics_f2.json  odoov19_quality.json  quiet_stone.json  quiet_stone_v1.json  sharp_flint.json  warm_birch.json  zeroclaw_agent.authority_overlay.json  zeroclaw_agent.json  zeroclaw_metrics.json
examples/integration/: agent_mail.sh  odoov19.sh  zeroclaw.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_check.rs  fuzz_compose.rs  fuzz_export_zeroclaw.rs  fuzz_import_aieos.rs  fuzz_import_zeroclaw.rs  fuzz_migrate.rs  fuzz_parse.rs
