[package]
name = "ampersona-sign"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JCS/RFC8785 canonicalization and ed25519 signing for ampersona."

[dependencies]
ampersona-core = { path = "../ampersona-core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
